--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A chatGPT chat bot for discord",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Fabio Botelho",
   "license": "MIT",
