Complete refactoring to apply Clean Code and SOLID

--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "A chatGPT chat bot for discord",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node discordBot.js",
+    "dev": "nodemon discordBot.js"
   },
   "author": "Fabio Botelho",
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "pdf-parse": "^1.1.1",
+    "pdf-to-text": "^0.0.7",
+    "request": "^2.88.2"
   }
 }
