--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "openai": "^3.1.0",
     "pdf-parse": "^1.1.1",
     "pdf-to-text": "^0.0.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "tiktoken-node": "^0.0.6"
   }
 }
