--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "background" : "node index.js > /dev/null 2>&1 &"
   },
   "author": "Fabio Botelho",
   "license": "MIT",
